--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -10,10 +10,11 @@
 
     {{ form_start(form) }}
 
-    {{ form_widget(form)}}
+    {{ form_widget(form) }}
 
 
-    <button:bubmit class="btn btn-primary">Créer la nouvelle annonce</button:bubmit>
+    <button type="submit" class="btn btn-primary">Créer la nouvelle annonce</button>
+
     {{ form_end(form) }}
 </div>
 {% endblock %}
