--- a/templates/ad/new.html.twig
+++ b/templates/ad/new.html.twig
@@ -4,7 +4,7 @@
     creation d'une annonce
 {% endblock %}
 
-{% form_theme form _self%}
+{% form_theme form 'ad/_collection.html.twig' %}
 
 {% block body %}
 <div class="container">
@@ -21,54 +21,6 @@
 </div>
 {% endblock %}
 
-
-{% block _ad_images_widget %}
-<p>Ici vous pouvez ajouter vos propres images !</p>
-{{ form_widget(form) }}
-
-<div class="form-group">
-    <button type="button" id="add-image" class="btn btn-primary">Ajouter une image</button>
-</div>	
-{% endblock %}
-
-{% block _ad_images_entry_row %}
-    {{ form_widget(form) }}
-{% endblock %}
-
-{% block _ad_images_entry_widget %}
-    <div class="form-group" id="block_{{id}}">
-
-        <div class="row">
-            <div class="col-10">
-                <div class="row">
-            <div class="col">
-                {{form_widget(form.url)}}
-            </div>
-            <div class="col">
-                {{form_widget(form.caption)}}
-            </div>
-        </div>
-            </div>
-        </div>
-        
-        
-    </div>
-{% endblock %}
-
 {% block javascripts %}
-
-    <script>   
-        $('#add-image').click(function(){
-            
-            // je recuper le numero des futurs champs que je veux creer
-            const index = $('#ad_images div.form-group').length;
-
-            //Je récupère le prototype des entrees
-            const tmpl = $('#ad_images').data('prototype').replace(/__name__/g, index);
-
-            //j'injecte ce code au sein de la div
-            $('#ad_images').append(tmpl);
-
-        });
-    </script>
+    <script src="/js/ad.js"></script>
 {% endblock %}
